--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 packages = [{include = "page_analyzer"}]
 
 classifiers = [
-    "Topic :: File Formats"
+    "Topic :: Internet :: WWW/HTTP"
 ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.0"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
