--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 
-app = "page_analyzer.app:main"
+app = "page_analyzer.app:index"
