--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ classifiers = [
 python = "^3.10"
 flask = "^3.0.0"
 gunicorn = "^21.2.0"
+python-dotenv = "^1.0.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
