--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ gunicorn = "^21.2.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
 validators = "^0.22.0"
+requests = "^2.31.0"
+bs4 = "^0.0.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
